tests/compiletests/ui/dis/issue-284-dead-fragment-bad.stderr
error: entry point `main_fs` was eliminated during dead code elimination, likely because its function body was optimized away
   |
   = help: fragment shaders must write to output parameters. Use complete assignment like `*out_frag_color = vec4(r, g, b, a)` instead of individual component assignments
   = note: example: `*out_frag_color = vec4(in_color.x, in_color.y, in_color.z, 1.0);`
   = note: entry point functions that produce no observable effects are considered dead code and will be eliminated during optimization